[ADD]add upgrade file 0.10-to-0.11 and update steps install